# RocketXG

./: .gitignore  README.md  pyproject.toml
data/: rlcs23.db  test.parquet
notebooks/: bds-g2.parquet  bds-g2.replay  db-test.ipynb  parquet_test.ipynb  rlgym-test.ipynb  shot-detection.ipynb  structure-test.ipynb  xgboost-test.ipynb
scripts/: process_data.py  process_directory.py  process_replay.py
src/database/: builder.py  models.py  queries.py
src/rocketxg/: __init__.py  hit.py  hit_analysis.py  player.py  plotting.py  shot_detection.py
src/rocketxg/possessions/: analysis.py  base.py  possession.py
src/rocketxg/simulator/: ball_simulator.py
src/rocketxg/utils/: math.py
