[project]
name = "rocketxg"
version = "0.1.0"
description = ""
authors = [
    {name = "Violet Hart",email = "vihart.rl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rlgym[sim] (>=2.0.1,<3.0.0)",
    "rlgym-tools (>=2.3.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "ipympl (>=0.9.7,<0.10.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "xgboost (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "progress (>=1.6,<2.0)"
]

[tool.poetry]
packages = [{include = "rocketxg", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
